fixed kube-versions var names

--- a/kube-versions.yaml
+++ b/kube-versions.yaml
@@ -1,49 +1,49 @@
-- KUBE-VERSION: 1.5.0
-- KUBE-VERSION: 1.5.1
-- KUBE-VERSION: 1.5.2
-- KUBE-VERSION: 1.5.3
-- KUBE-VERSION: 1.5.4
-- KUBE-VERSION: 1.5.5
-- KUBE-VERSION: 1.5.6
-- KUBE-VERSION: 1.5.7
-- KUBE-VERSION: 1.5.8
-- KUBE-VERSION: 1.6.0
-- KUBE-VERSION: 1.6.1
-- KUBE-VERSION: 1.6.10
-- KUBE-VERSION: 1.6.11
-- KUBE-VERSION: 1.6.12
-- KUBE-VERSION: 1.6.13
-- KUBE-VERSION: 1.6.2
-- KUBE-VERSION: 1.6.3
-- KUBE-VERSION: 1.6.4
-- KUBE-VERSION: 1.6.5
-- KUBE-VERSION: 1.6.6
-- KUBE-VERSION: 1.6.7
-- KUBE-VERSION: 1.6.8
-- KUBE-VERSION: 1.6.9
-- KUBE-VERSION: 1.7.0
-- KUBE-VERSION: 1.7.1
-- KUBE-VERSION: 1.7.10
-- KUBE-VERSION: 1.7.11
-- KUBE-VERSION: 1.7.12
-- KUBE-VERSION: 1.7.2
-- KUBE-VERSION: 1.7.3
-- KUBE-VERSION: 1.7.4
-- KUBE-VERSION: 1.7.5
-- KUBE-VERSION: 1.7.6
-- KUBE-VERSION: 1.7.7
-- KUBE-VERSION: 1.7.8
-- KUBE-VERSION: 1.7.9
-- KUBE-VERSION: 1.8.0
-- KUBE-VERSION: 1.8.1
-- KUBE-VERSION: 1.8.2
-- KUBE-VERSION: 1.8.3
-- KUBE-VERSION: 1.8.4
-- KUBE-VERSION: 1.8.5
-- KUBE-VERSION: 1.8.6
-- KUBE-VERSION: 1.8.7
-- KUBE-VERSION: 1.8.8
-- KUBE-VERSION: 1.9.0
-- KUBE-VERSION: 1.9.1
-- KUBE-VERSION: 1.9.2
-- KUBE-VERSION: 1.9.3
+- KUBECTL_VERSION: 1.5.0
+- KUBECTL_VERSION: 1.5.1
+- KUBECTL_VERSION: 1.5.2
+- KUBECTL_VERSION: 1.5.3
+- KUBECTL_VERSION: 1.5.4
+- KUBECTL_VERSION: 1.5.5
+- KUBECTL_VERSION: 1.5.6
+- KUBECTL_VERSION: 1.5.7
+- KUBECTL_VERSION: 1.5.8
+- KUBECTL_VERSION: 1.6.0
+- KUBECTL_VERSION: 1.6.1
+- KUBECTL_VERSION: 1.6.10
+- KUBECTL_VERSION: 1.6.11
+- KUBECTL_VERSION: 1.6.12
+- KUBECTL_VERSION: 1.6.13
+- KUBECTL_VERSION: 1.6.2
+- KUBECTL_VERSION: 1.6.3
+- KUBECTL_VERSION: 1.6.4
+- KUBECTL_VERSION: 1.6.5
+- KUBECTL_VERSION: 1.6.6
+- KUBECTL_VERSION: 1.6.7
+- KUBECTL_VERSION: 1.6.8
+- KUBECTL_VERSION: 1.6.9
+- KUBECTL_VERSION: 1.7.0
+- KUBECTL_VERSION: 1.7.1
+- KUBECTL_VERSION: 1.7.10
+- KUBECTL_VERSION: 1.7.11
+- KUBECTL_VERSION: 1.7.12
+- KUBECTL_VERSION: 1.7.2
+- KUBECTL_VERSION: 1.7.3
+- KUBECTL_VERSION: 1.7.4
+- KUBECTL_VERSION: 1.7.5
+- KUBECTL_VERSION: 1.7.6
+- KUBECTL_VERSION: 1.7.7
+- KUBECTL_VERSION: 1.7.8
+- KUBECTL_VERSION: 1.7.9
+- KUBECTL_VERSION: 1.8.0
+- KUBECTL_VERSION: 1.8.1
+- KUBECTL_VERSION: 1.8.2
+- KUBECTL_VERSION: 1.8.3
+- KUBECTL_VERSION: 1.8.4
+- KUBECTL_VERSION: 1.8.5
+- KUBECTL_VERSION: 1.8.6
+- KUBECTL_VERSION: 1.8.7
+- KUBECTL_VERSION: 1.8.8
+- KUBECTL_VERSION: 1.9.0
+- KUBECTL_VERSION: 1.9.1
+- KUBECTL_VERSION: 1.9.2
+- KUBECTL_VERSION: 1.9.3
