--- a/kubectl/Dockerfile
+++ b/kubectl/Dockerfile
@@ -5,4 +5,4 @@ ARG KUBECTL_VERSION
 RUN curl -L "https://storage.googleapis.com/kubernetes-release/release/v${KUBECTL_VERSION}/bin/linux/amd64/kubectl" -o /usr/local/bin/kubectl \
     && chmod +x /usr/local/bin/kubectl
 
-CMD bash
+ENTRYPOINT ["kubectl"]
