--- a/kube-helm/Dockerfile
+++ b/kube-helm/Dockerfile
@@ -9,7 +9,8 @@ WORKDIR /tmp
 RUN curl -L "https://storage.googleapis.com/kubernetes-helm/helm-v${HELM_VERSION}-linux-amd64.tar.gz" -o helm.tar.gz \
     && tar -zxvf helm.tar.gz \
     && mv ./linux-amd64/helm /usr/local/bin/helm \
-    && rm -rf /tmp/*
+    && rm -rf /tmp/* \
+    && helm init --client-only
 
 WORKDIR ~
 
