--- a/cfbase/Dockerfile
+++ b/cfbase/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine
 
 RUN apk add --update ca-certificates \
-    && apk add bash curl jq\
+    && apk add coreutils bash curl jq\
     && rm /var/cache/apk/* \
     && rm -rf /tmp/*
 
