--- a/kube-versions.yaml
+++ b/kube-versions.yaml
@@ -47,3 +47,8 @@
 - KUBECTL_VERSION: 1.9.1
 - KUBECTL_VERSION: 1.9.2
 - KUBECTL_VERSION: 1.9.3
+- KUBECTL_VERSION: 1.9.4
+- KUBECTL_VERSION: 1.9.5
+- KUBECTL_VERSION: 1.9.6
+- KUBECTL_VERSION: 1.10.0
+
