add to fs-ops workspace manager binary

--- a/fs-ops/Dockerfile
+++ b/fs-ops/Dockerfile
@@ -1,4 +1,9 @@
+FROM codefresh/workspace-manager as workspace
+
+
 FROM codefresh/cfbase
+
+COPY --from=workspace /workspace-manager /usr/local/bin/
 
 RUN apk update && \
     apk add rsync
