--- a/cfbase/Dockerfile
+++ b/cfbase/Dockerfile
@@ -1,5 +1,7 @@
 FROM alpine
 
+LABEL io.codefresh.engine="true"
+
 RUN apk add --update ca-certificates \
     && apk add coreutils bash curl jq\
     && rm /var/cache/apk/* \
